k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-login
  template:
    metadata:
      labels:
        app: auth-login
        version: v2  # Cambia la etiqueta de versión a una nueva
    spec:
      containers:
      - name: app
        image: us-central1-docker.pkg.dev/our-voice-417119/vozy/auth-login:v2.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
