k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: auth-login
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
